--- a/open_project/build.gradle
+++ b/open_project/build.gradle
@@ -99,6 +99,8 @@ dependencies {
     compile 'com.squareup:otto:1.3.5'
     //compile 'com.jakewharton:butterknife:5.1.2'
 
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
+
     //compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     //annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
