--- a/open_project/src/main/AndroidManifest.xml
+++ b/open_project/src/main/AndroidManifest.xml
@@ -112,8 +112,7 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
 
         <activity
             android:name=".ui.Activity.Login.LoginActivity"
@@ -130,9 +129,7 @@
         <activity
             android:name=".ui.Activity.Home.HomeActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
+            android:screenOrientation="portrait"></activity>
 
 
         <!--<receiver
